Restructure application to a single-app without db or http api

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,6 @@
     <packaging>pom</packaging>
 
     <modules>
-        <module>backend</module>
-        <module>cli</module>
+        <module>lessonmanagement</module>
     </modules>
 </project>
