--- a/LessonManagement/pom.xml
+++ b/LessonManagement/pom.xml
@@ -8,7 +8,7 @@
 	<groupId>com.example</groupId>
 	<artifactId>lessonmanagement</artifactId>
 	<version>1.0-SNAPSHOT</version>
-	<name>Lesson Management Console App</name>
+	<name>Lesson Management App</name>
 
 	<properties>
 		<maven.compiler.source>17</maven.compiler.source>
